z-index stuff fixed, and style link color maroon

--- a/demo-style.css
+++ b/demo-style.css
@@ -5,7 +5,15 @@
 body {
     font-family: 'Raleway', sans-serif;
 }
+a {
+    color: rgb(144, 16, 41);
+    text-decoration: underline;
+}
 
+a:hover, a:focus {
+    color: rgb(144, 16, 41);
+    text-decoration: underline;
+}
 /* .top-nav { */
 /*     width: 100%; */
 /*     height: 40px; */
